--- a/routing/src/index.css
+++ b/routing/src/index.css
@@ -1,34 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-}
-
-.navbar {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin-top: 20px;
-  padding: 0 20vw;
-}
-
-.link {
-  text-decoration: none;
-  font-weight: bold;
-  color: rgb(53, 51, 51);
-  transition: color 0.3s, background-color 0.3s;
-  padding: 5px 10px;
-  margin-right: 15px;
-}
-
-.link:hover {
-  color: white;
-  background-color: rgb(61, 61, 180);
-  border-radius: 8px;
+  font-family: "Inter", sans-serif;
 }
 
 .not-found {
@@ -36,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50vh; 
+  height: 50vh;
   color: rgb(53, 51, 51);
   font-weight: bold;
 }
@@ -49,18 +22,43 @@
   font-size: 50px;
   font-weight: bold;
 }
+.secret-image {
+  display: block;
+}
 
-.show-btn {
+.navbar {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+}
+
+.navbar-item {
+  margin: 0 15px;
+}
+
+.link {
+  text-decoration: none;
+  color: #fff;
+  background-color: #333;
+  transition: color 0.3s ease;
+}
+
+.link:hover {
   text-decoration: none;
   color: white;
   background-color: rgb(61, 61, 180);
-  padding: 5px 10px;
   border-radius: 8px;
-  transition: color 0.3s, background-color 0.3s;
-  margin-left:  auto;
-  margin-right: auto;
 }
 
-.secret-image {
-  display: block;
+.link {
+  text-decoration: none;
+  font-weight: bold;
+  color: rgb(235, 219, 219);
+  transition: color 0.3s, background-color 0.3s;
+  padding: 5px 10px;
+  margin-right: 5px;
 }
